# deer-flow

./: .env.bak  .env.bak2  .env.example  .env.production  .env.test  ARCHITECTURE.md  BACKEND_API_SETUP.md  CLAUDE.md  CLEANUP_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING  DEV_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  ENV_VARIABLES_NEEDED.md  FINAL_MIGRATION_VALIDATION_REPORT.md  FINAL_VALIDATION_REPORT.md  FIXES_COMPLETE.md  FRONTEND_API_INTEGRATION.md  GUIA_MIGRACAO_SUPABASE_CLOUD.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_PLAN.md  LOOP_INFINITO_RESOLVIDO.md  MIGRACAO_AUTH_README.md  MIGRATION_COMPLETE.md  MIGRATION_REPORT.md  Makefile  NEON_DATABASE_ANALYSIS_REPORT.md  PLANO_MIGRACAO_SUPABASE.md  PROBLEMA_RESOLVIDO.md  QUICK_START.md  README.md  README_zh.md  REST_API_MIGRATION.md  ROLLBACK_GUIDE.md  SOLUCAO_FINAL.md  SOLUCAO_TIMEOUT_SUPABASE.md  STATUS_CHAT.md  SUPABASE_CLEANUP_REPORT.md  SUPABASE_INTEGRATION_REPORT.md  (+34 more)
.claude/: settings.local.json
.husky/: pre-commit
Spec/complete-integration-tests/: design.md  requirements.md  tasks.md
Spec/deer-flow-analysis-2025-10-17/: ANALYSIS_REPORT.md
Spec/deer-flow-bug-fixes-and-improvements/: QUICK_REFERENCE.md  README.md  design.md  requirements.md  tasks.md
Spec/deerflow-critical-fixes/: design.md  requirements.md  tasks.md
Spec/fix-test-suite/: tasks.md
Spec/performance-reliability-fix/: design.md  requirements.md  tasks.md
Spec/repository-cleanup/: design.md  requirements.md  tasks.md
Spec/supabase-cleanup/: tasks.md
Spec/supabase-cleanup-complete/: design.md  requirements.md  tasks.md
Spec/test-orchestration-tools/: design.md  requirements.md  tasks.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  20aa857c2b5e_update_users_schema_and_create_tables.py  add_supabase_id_to_users.py
docs/: HEALTH_CHECK_DATABASE_SUPPORT.md  INSTALLATION_DEVELOPMENT_GUIDE.md  NEON_CLERK_ARCHITECTURE.md  SUPABASE_ARCHITECTURE.md  SUPABASE_IMPLEMENTATION_SUMMARY.md  configuration_guide.md
notes/: loading.tsx  page.tsx
reports/: file-classification.json  repo-analysis.json
scripts/: backup-manager.py  backup-verification.py  backup_cron.sh  backup_database.py  cleanup-python-cache.py  cleanup-screenshots.py  cleanup-temp-files.py  consolidate-env.py  dev-langgraph.sh  dev.sh  env-analyzer.py  env-consolidation.py  evaluate-mock-data.py  file-classifier.py  final-validation.py  health-check.py  repo-analysis.py  screenshot-analyzer.py  screenshot-decision.py  spec-analyzer.py  temp-file-scanner.py
src/agents/: agents.py
src/config/: __init__.py  configuration.py  loader.py  settings.py
src/crawler/: crawler.py
src/database/: base.py  models.py
src/graph/: builder.py  checkpoint.py  nodes.py  types.py
src/llms/: llm.py
src/llms/providers/: dashscope.py
src/podcast/: types.py
src/prompts/: coordinator.md  planner_model.py  researcher.md
src/rag/: milvus.py  ragflow.py
src/server/: app.py  auth.py  auth_dev.py  auth_routes.py  cache.py  calendar_routes.py  chat_request.py  circuit_breaker.py  clerk_auth.py  config_request.py  conversations_routes.py  dashboard_routes.py  error_handler.py  error_responses.py  exceptions.py  file_validator.py  health_check.py  health_models.py  health_routes.py  init_db.py  mcp_request.py  mcp_utils.py  middleware.py  notes_routes.py  observability.py  pagination.py  projects_routes.py  protected_services.py  rag_request.py  rate_limiter.py  reminders_routes.py  schemas.py  supabase_auth.py  supabase_client.py
src/tools/: __init__.py  decorators.py  google_gemini_tts.py  minimax_tts.py  python_repl.py  retriever.py  search.py  search_postprocessor.py  tts.py
src/utils/: context_manager.py  json_utils.py
supabase/: .env.example  config.toml  schema.sql
supabase/migrations/: 002_add_project_conversation_relation.sql
tests/: test_basic.py  test_projects_integration.py  test_state.py
tests/integration/: test_api_endpoints.py  test_clerk_integration.py  test_health_check_db_compatibility.py  test_neon_database_connection.py  test_nodes.py
tests/server/: conftest.py  test_auth.py  test_auth_isolated.py  test_schemas.py
web/: .env.development  .env.example  .env.production  .gitignore  .prettierignore  .prettierrc  ANALISE_COMPARATIVA_COMPLETA.md  ANALISE_MIGRACAO_PROBLEMAS.md  CORRECOES_APLICADAS_SUPABASE.md  Dockerfile  ERRO_PROJECT_ID_SOLUCAO.md  FIX_INSTRUCTIONS.md  LAYOUT_STANDARDS.md  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_SUMMARY.md  SISTEMA_AUTENTICACAO.md  STATUS_CORRECOES.md  capture-homepage.mjs  check-imports.mjs  check-missing-files.sh  clear-all-auth.html  clear-auth.js  clear-clerk-terminal.sh  debug-chat-output.txt  eslint.config.js  fix-clerk-auth.js  fix-localstorage.js  install-missing-deps.sh  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  quick-clear-auth.js  test-clerk.mjs  test-crud-browser.mjs  test-final-clerk.mjs  test-new-landing.mjs  test-playwright.cjs  (+2 more)
web/scripts/: apply-sql.sh  create-supabase-tables.sql  debug-kanban.js  fix-chat-tables.sql  setup-rls-policies.sql  test-auth.mjs  verify-and-fix-tasks-table.sql
web/src/: env.js  middleware.ts
web/tests/: markdown-katex.test.ts  markdown-math-editor.test.ts
(+395 files in other folders)
